# CC-Syntactic

./: ChoiceCalculus.cabal
src/CC/: Atomic.hs  BinaryChoice.hs  Choice.hs  Data.hs  FormulaChoice.hs  Object.hs
src/Language/ChoiceCalculus/: Choice.hs  Object.hs
src/Language/ChoiceCalculus/Core/: Syntax.hs
src/Language/Syntactic/: Object.hs
src/Language/Syntactic/CC/: Choice.hs
